--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
     <section class="about-team">
         <div class="team-background">
             <div class="team-image">
-                <img src="#" alt="#">
+                <img src="assets/about2.png" alt="#">
             </div>
             <div class="team-description">
                 <p>Edoardo</p>
@@ -68,31 +68,31 @@
             <h1>Our Team</h1>
             <div class="team-members">
                 <div class="member-card">
-                    <img src="#" alt="#">
+                    <img src="assets/user-icon.png" width="55px" height="55px" alt="#">
                     <div class="team-detail">
                         <h1>Edoardo</h1>
-                        <p>CEO</p>
+                        <p>Full-stack Developer</p>
                     </div>
                 </div>
                 <div class="member-card">
-                    <img src="#" alt="#">
+                    <img src="assets/user-icon.png" width="55px" height="55px" alt="#">
                     <div class="team-detail">
                         <h1>Edoardo</h1>
-                        <p>CEO</p>
+                        <p>Software Engineer</p>
                     </div>
                 </div>
                 <div class="member-card">
-                    <img src="#" alt="#">
+                    <img src="assets/user-icon.png" width="55px" height="55px" alt="#">
                     <div class="team-detail">
                         <h1>Edoardo</h1>
-                        <p>CEO</p>
+                        <p>QA and Tester</p>
                     </div>
                 </div>
                 <div class="member-card">
-                    <img src="#" alt="#">
+                    <img src="assets/user-icon.png" width="55px" height="55px" alt="#">
                     <div class="team-detail">
                         <h1>Edoardo</h1>
-                        <p>CEO</p>
+                        <p>Project Leader</p>
                     </div>
                 </div>
             </div>
@@ -101,11 +101,11 @@
     <div class="testimonials">
         <h1>Our Partnership and Collabratiors</h1>
         <div class="brand-images">
-            <img src="#" alt="#">
-            <img src="#" alt="#">
-            <img src="#" alt="#">
-            <img src="#" alt="#">
-            <img src="#" alt="#">
+            <img src="assets/brand1.png" height="100px" alt="#">
+            <img src="assets/brand2.png" height="100px" alt="#">
+            <img src="assets/brand3.png" height="100px" alt="#">
+            <img src="assets/brand4.png" height="100px" alt="#">
+            <img src="assets/brand5.png" height="100px" alt="#">
         </div>
     </div>
     <footer></footer>
