--- a/services.html
+++ b/services.html
@@ -20,19 +20,19 @@
         </div>
         <div class="achievements">
             <div class="achievement-data">
-                <img src="#" alt="#">
+                <img src="assets/clients.svg" alt="#">
                 <p class="total" id="client-total">96</p>
                 <p class="caption">Clients</p>
             </div>
             <line></line>
             <div class="achievement-data">
-                <img src="#" alt="#">
+                <img src="assets/countries.svg" alt="#">
                 <p class="total" id="country-total">22</p>
                 <p class="caption">Countries</p>
             </div>
             <line></line>
             <div class="achievement-data">
-                <img src="#" alt="#">
+                <img src="assets/projects.svg" alt="#">
                 <p class="total" id="project-total">58</p>
                 <p class="caption">Project</p>
             </div>
@@ -40,8 +40,8 @@
     </div>
     <section class="services-area">
         <div class="service-description">
-            <div class="video-container">
-                <video src="#"></video>
+            <div class="video">
+                <img src="assets/test.svg"></img>
             </div>
             <div class="detail">
                 <h1>What we provide ?</h1>
@@ -63,13 +63,13 @@
             <div class="sliders">
             <div class="slider">
                 <div class="slider-top">
-                <img src="#.jpg" alt="user-icon">
+                <img src="assets/user-icon.png" width="55px" height="55px" alt="user-icon">
                 <div class="name">
                     <h4>Viezh Robert</h4>
                     <p>Warsaw, Poland</p>
                 </div>
                 <div class="rating">
-                    <img src="review-star.svg" alt="rating">
+                    <img src="assets/review-star.svg" alt="rating">
                     <p>4.5</p>
                 </div>
                 </div>
@@ -79,7 +79,7 @@
             </div>
             <div class="slider">
                 <div class="slider-top">
-                <img src="#.jpg" alt="user-icon">
+                <img src="assets/user-icon.png" width="55px" height="55px" alt="user-icon">
                 <div class="name">
                     <h4>Yessica Christy</h4>
                     <p>Shanxi, China</p>
@@ -95,7 +95,7 @@
             </div>
             <div class="slider">
                 <div class="slider-top">
-                <img src="#.jpg" alt="user-icon">
+                <img src="assets/user-icon.png" width="55px" height="55px" alt="user-icon">
                 <div class="name">
                     <h4>Kim Young Jou</h4>
                     <p>Seoul, Korea</p>
