--- a/news.html
+++ b/news.html
@@ -27,7 +27,7 @@
     <section class="news-content">
         <div class="left">
             <div class="first-news">
-                <img src="#" alt="content">
+                <img src="assets/news1.png" alt="content">
                 <div class="author">
                     <p class="author-name">John smash</p>
                     <p>.5 min</p>
@@ -39,9 +39,9 @@
             </div>
             <hr>
             <div class="second-news">
-                <img src="#" alt="content">
+                <img src="assets/news2.png" alt="content">
                 <div class="author">
-                    <p class="autho-name">John smash</p>
+                    <p class="author-name">John smash</p>
                     <p>.5 min</p>
                 </div>
                 <div class="content">
@@ -52,7 +52,7 @@
         </div>
         <div class="right">
             <div class="news-thumbnail">
-                <img id="thumbnail" src="#" alt="thumbnail">
+                <img id="thumbnail" src="assets/news3.png" alt="thumbnail">
                 <div class="thumbnail-content">
                     <div class="author">
                         <p class="author-name">John smash</p>
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="news-thumbnail">
-                <img id="thumbnail" src="#" alt="thumbnail">
+                <img id="thumbnail" src="assets/news4.png" alt="thumbnail">
                 <div class="thumbnail-content">
                     <div class="author">
                         <p class="author-name">John smash</p>
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="news-thumbnail">
-                <img id="thumbnail" src="#" alt="thumbnail">
+                <img id="thumbnail" src="assets/news5.png" alt="thumbnail">
                 <div class="thumbnail-content">
                     <div class="author">
                         <p class="author-name">John smash</p>
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="news-thumbnail">
-                <img id="thumbnail" src="#" alt="thumbnail">
+                <img id="thumbnail" src="assets/news6.png" alt="thumbnail">
                 <div class="thumbnail-content">
                     <div class="author">
                         <p class="author-name">John smash</p>
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="news-thumbnail">
-                <img id="thumbnail" src="#" alt="thumbnail">
+                <img id="thumbnail" src="assets/news7.png" alt="thumbnail">
                 <div class="thumbnail-content">
                     <div class="author">
                         <p class="author-name">John smash</p>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="news-thumbnail">
-                <img id="thumbnail" src="#" alt="thumbnail">
+                <img id="thumbnail" src="assets/news8.png" alt="thumbnail">
                 <div class="thumbnail-content">
                     <div class="author">
                         <p class="author-name">John smash</p>
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="news-thumbnail">
-                <img id="thumbnail" src="#" alt="thumbnail">
+                <img id="thumbnail" src="assets/news9.png" alt="thumbnail">
                 <div class="thumbnail-content">
                     <div class="author">
                         <p class="author-name">John smash</p>
