--- a/footer.html
+++ b/footer.html
@@ -50,6 +50,9 @@
         <div class="social__media">
         </div>
     </div>
+    <div class="copyright">
+        <p>Copyright ® 2021 Company All rights Rcerved</p>
+    </div>
 </div>
 <script>
     const socmed = [
