--- a/about.html
+++ b/about.html
@@ -35,15 +35,15 @@
         <div class="right">
             <div class="hero-carousel">
                 <div class="hero-carousel-item">
-                    <img src="assets/hero.png" alt="hero">
+                    <img src="assets/hero.png" loading="lazy" alt="hero">
                 </div>
                 <div class="hero-carousel-item">
-                    <img src="assets/hero.png" alt="hero">
+                    <img src="assets/hero.png" loading="lazy" alt="hero">
                 </div>
                 <div class="hero-carousel-btn">
-                    <img src="assets/arrow_left.svg" alt="arrow_left" id="carousel-left-btn">
+                    <img src="assets/arrow_left.svg" loading="lazy" alt="arrow_left" id="carousel-left-btn">
                     <p id="carousel-index">1 of 2</p>
-                    <img src="assets/arrow_right.svg" alt="arrow_right" id="carousel-right-btn">
+                    <img src="assets/arrow_right.svg" loading="lazy" alt="arrow_right" id="carousel-right-btn">
                 </div>                
             </div>
         </div>
@@ -56,7 +56,7 @@
     <section class="about-team">
         <div class="team-background">
             <div class="team-image">
-                <img src="assets/about2.png" alt="#">
+                <img src="assets/about2.png" loading="lazy" alt="#">
             </div>
             <div class="team-description">
                 <p>Edoardo</p>
@@ -68,28 +68,28 @@
             <h1>Our Team</h1>
             <div class="team-members">
                 <div class="member-card">
-                    <img src="assets/user-icon.png" width="55px" height="55px" alt="#">
+                    <img src="assets/user-icon.png" loading="lazy" width="55px" height="55px" alt="#">
                     <div class="team-detail">
                         <h1>Edoardo</h1>
                         <p>Full-stack Developer</p>
                     </div>
                 </div>
                 <div class="member-card">
-                    <img src="assets/user-icon.png" width="55px" height="55px" alt="#">
+                    <img src="assets/user-icon.png" loading="lazy" width="55px" height="55px" alt="#">
                     <div class="team-detail">
                         <h1>Edoardo</h1>
                         <p>Software Engineer</p>
                     </div>
                 </div>
                 <div class="member-card">
-                    <img src="assets/user-icon.png" width="55px" height="55px" alt="#">
+                    <img src="assets/user-icon.png" loading="lazy" width="55px" height="55px" alt="#">
                     <div class="team-detail">
                         <h1>Edoardo</h1>
                         <p>QA and Tester</p>
                     </div>
                 </div>
                 <div class="member-card">
-                    <img src="assets/user-icon.png" width="55px" height="55px" alt="#">
+                    <img src="assets/user-icon.png" loading="lazy" width="55px" height="55px" alt="#">
                     <div class="team-detail">
                         <h1>Edoardo</h1>
                         <p>Project Leader</p>
@@ -101,11 +101,11 @@
     <div class="testimonials">
         <h1>Our Partnership and Collabratiors</h1>
         <div class="brand-images">
-            <img src="assets/brand1.png" height="100px" alt="#">
-            <img src="assets/brand2.png" height="100px" alt="#">
-            <img src="assets/brand3.png" height="100px" alt="#">
-            <img src="assets/brand4.png" height="100px" alt="#">
-            <img src="assets/brand5.png" height="100px" alt="#">
+            <img src="assets/brand1.png" loading="lazy" height="100px" alt="#">
+            <img src="assets/brand2.png" loading="lazy" height="100px" alt="#">
+            <img src="assets/brand3.png" loading="lazy" height="100px" alt="#">
+            <img src="assets/brand4.png" loading="lazy" height="100px" alt="#">
+            <img src="assets/brand5.png" loading="lazy" height="100px" alt="#">
         </div>
     </div>
     <footer></footer>
