--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque rerum, explicabo delectus nesciunt recusandae eligendi vero atque beatae minus fugiat architecto cumque commodi expedita nemo! Maiores sequi corporis voluptatum ex.</p>
                 <a href="#" class="hero-button">Get More Details</a>
             </div>
-            <img class="hero-image" src="assets/hero.png" alt="hero">
+            <img class="hero-image" src="assets/hero.png" loading="lazy" alt="hero">
         </section>
         <section class="service">
             <h1 class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h1>
@@ -31,8 +31,8 @@
                         ever since the 1500s</p>    
                     </div>
                 <div class="images">
-                    <img class="image" src="assets/service.png" alt="service" width="1300px">
-                    <img class="svg" src="assets/service.svg" alt="svg">
+                    <img class="image" src="assets/service.png" loading="lazy" alt="service" width="1300px">
+                    <img class="svg" src="assets/service.svg" loading="lazy" alt="svg">
                 </div>
             </div>
             <div class="service__content pre">
@@ -71,7 +71,7 @@
             <div class="project__items">
             </div>
             <div class="project__description">
-                <img class="project__description__image" src="assets/project__description__image.png" alt="project__description__image">
+                <img class="project__description__image" src="assets/project__description__image.png" loading="lazy" alt="project__description__image">
                 <div class="project__description__text pre">
                     <h1>Lorem Ipsum is simply dummy 
                         text dummy text.</h1>
