--- a/services.html
+++ b/services.html
@@ -63,7 +63,7 @@
             <div class="sliders">
             <div class="slider">
                 <div class="slider-top">
-                <img src="assets/user-icon.png" width="55px" height="55px" alt="user-icon">
+                <img src="assets/user-icon.png" loading="lazy" width="55px" height="55px" alt="user-icon">
                 <div class="name">
                     <h4>Viezh Robert</h4>
                     <p>Warsaw, Poland</p>
@@ -79,7 +79,7 @@
             </div>
             <div class="slider">
                 <div class="slider-top">
-                <img src="assets/user-icon.png" width="55px" height="55px" alt="user-icon">
+                <img src="assets/user-icon.png" loading="lazy" width="55px" height="55px" alt="user-icon">
                 <div class="name">
                     <h4>Yessica Christy</h4>
                     <p>Shanxi, China</p>
@@ -95,7 +95,7 @@
             </div>
             <div class="slider">
                 <div class="slider-top">
-                <img src="assets/user-icon.png" width="55px" height="55px" alt="user-icon">
+                <img src="assets/user-icon.png" loading="lazy" width="55px" height="55px" alt="user-icon">
                 <div class="name">
                     <h4>Kim Young Jou</h4>
                     <p>Seoul, Korea</p>
