--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <div class="hero-title">
             <h1>Welcome to Contact us Page</h1>
         </div>
-        <img src="assets/global.svg" alt="map">
+        <img src="assets/global.svg" loading="lazy" alt="map">
         <div class="how-to-contact">
             <div class="contact-detail">
                 <p>Follow us</p>
@@ -66,8 +66,8 @@
             </div>
             <button class="btn-primary get-in-touch" type="submit">Get in touch</button>
         </form>        
-        <img class="top-vector" src="assets/vector-top-right.svg" alt="top-vector">
-        <img class="bot-vector" src="assets/vector-bot-right.svg" alt="bot-vector">
+        <img class="top-vector" src="assets/vector-top-right.svg" loading="lazy" alt="top-vector">
+        <img class="bot-vector" src="assets/vector-bot-right.svg" loading="lazy" alt="bot-vector">
     </div>
     <footer></footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
